--- a/404.html
+++ b/404.html
@@ -122,6 +122,10 @@
 <script src="https://zivonzhang.github.io/js/script-pcw6v3xilnxydl1vddzazdverrnn9ctynvnxgwho987mfyqkuylcb1nlt.min.js"></script>
 
 
+  
+    <script src="https://zivonzhang.github.io/js/clicklove.js"></script>
+  
+
 <script lang="javascript">
 window.onload = updateMinWidth;
 window.onresize = updateMinWidth;
